Fixed margin alignments

--- a/src/fragments/Header/Header.css
+++ b/src/fragments/Header/Header.css
@@ -381,7 +381,7 @@ ul.mainNav{
 
         &:before{
           height: 35px;
-          margin-top: -18.5px;
+          margin-top: -15px;
           left: 0;
         }
       }
@@ -404,6 +404,10 @@ ul.mainNav{
       > li {
         > a {
           padding: 5px;
+        }
+
+        &:last-child > a {
+          padding: 15px;
         }
 
         &:last-child a:before {
@@ -465,27 +469,36 @@ ul.mainNav{
         padding: 5px;
         &:before {
           left: -10px;
+          height: 30px !important;
+          top: 12px;
         }
+      }
+
+      &:last-child >  a {
+        margin-top: 40px;
       }
     }
 
     li{
       display: block;
       text-align: left;
-      margin-left: 25px;
+      margin-left: 50px;
+      padding: 8px 0;
     }
   }
 
   .mainNavDropdown{
     width: 100%;
     position: static;
-    margin: 20px 0px;
+    margin: 15px 0px;
     padding: 20px;
     transform: translate(0%, 0%);
     box-shadow: none;
     background: $black_serverless;
-    border-top: 1px solid $grey1_serverless;
-    border-bottom: 1px solid $grey1_serverless;
+
+    ul > li {
+      margin-left: 0;
+    }
 
     &.simpleDrop,
     &.platformDrop,
